<resources>
    <string name="app_name">League of Legends Helper</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_match_history">Match History</string>
    <string name="matchHistory">Histórico de partidas</string>
    <string name="progressLoading">Carregando…</string>
    <string name="loadingMatchHistory">Carregando o seu histórico de partidas…</string>
    <string name="main_activity_login_button">Entrar</string>
    <string name="main_activity_summoner_name">Nome de Summoner</string>
    <string name="pref_server_option">Servidor de busca</string>
    <string name="pref_server_dialog">Selecione o Servidor</string>
    <string name="pref_server_default_value">BR</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="pref_server_category">Servidores</string>
    <string name="txtMatchMode">Modo:</string>
    <string name="txtMatchRegion">Região:</string>
    <string name="txtMatchDuration">Duração:</string>
    <string name="txtKills">K</string>
    <string name="txtKDASeparator">/</string>
    <string name="txtDeaths">D</string>
    <string name="txtAssists">A</string>
    <string name="txtDate">Data:</string>
    <string name="riot_return_http_unavailable">Servidor indisponível!</string>
    <string name="riot_return_http_rate_limit">Rate limit exceeded!</string>
    <string name="pref_server">pref_server</string>
    <string name="msg_buscando_dados_servidor">Buscando dados no servidor. Aguarde…</string>
    <string name="title_activity_current_match">CurrentMatchActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="action_current_match">Pesquisar jogador em Partida</string>
    <string name="matches_not_found">Nenhuma partida encontrada :(</string>
    <string name="loadingCurrentMatch" formatted="false">Carregando partida de %s</string>
    <string name="actual_match_vs">Contra</string>
    <string name="riot">Este aplicatio não pertence e nem foi criado pela RIOT.</string>
</resources>
